<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/phoneNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/phone_number" />

        <TextView
            android:id="@+id/messageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_label"
            android:textAppearance="?android:attr/textAppearanceLarge" >
            </TextView>

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textMultiLine"
            android:gravity="left|top"
            android:hint="@string/message_example">
        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sent_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/sent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/sent"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/quanityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/quantityValue"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/quantity_example" >
            </EditText>
            
            <Button
                android:id="@+id/send"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="19.66"
                android:onClick="onSend"
                android:text="@string/send" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>